consolidate JS signin signup docs to component reference docs

--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -127,7 +127,7 @@ Registers a listener that triggers a callback whenever a change in the [`Client`
 #### `Resources`
 
 
-| Name | Type | 
+| Name | Type |
 | --- | --- |
 | `client` | [`Client`][client-ref] |
 | `session` | [`Session`][session-ref] \| `null` \| `undefined` |
@@ -170,18 +170,21 @@ function authenticateWithMetamask({
 
 ## Components
 
-<div className="container mx-auto my-4">
-  <div className="grid lg:grid-cols-2 lg:grid-rows-4 justify-center gap-x-7">
-    <ComponentPreviewCards title="Sign In" image="/docs/images/ui-components/component-sign_in.svg" link="/docs/references/javascript/clerk/sign-in" cta="Read docs"/>
-    <ComponentPreviewCards title="Sign Up" image="/docs/images/ui-components/component-sign_up.svg" link="/docs/references/javascript/clerk/sign-up" cta="Read docs"/>
-    <ComponentPreviewCards title="User Profile" image="/docs/images/ui-components/component-user_profile.svg" link="/docs/references/javascript/clerk/user-profile" cta="Read docs"/>
-    <ComponentPreviewCards title="User Button" image="/docs/images/ui-components/component-user_button.svg" link="/docs/references/javascript/clerk/user-button" cta="Read docs"/>
-    <ComponentPreviewCards title="Organization Profile" image="/docs/images/ui-components/component-org_profile.svg" link="/docs/references/javascript/clerk/organization-profile" cta="Read docs"/>
-    <ComponentPreviewCards title="Organization Switcher" image="/docs/images/ui-components/component-org_switcher.svg" link="/docs/references/javascript/clerk/organization-switcher" cta="Read docs"/>
-    <ComponentPreviewCards title="Create Organization" image="/docs/images/ui-components/component-org_create.svg" link="/docs/references/javascript/clerk/create-organization" cta="Read docs"/>
-  </div>
-</div>
+The `Clerk` class also contains a number of methods for interacting with Clerk's prebuilt components.
 
+### `<SignIn />`
+
+= [`mountSignIn()`](/docs/components/authentication/sign-in#mount-sign-in)
+- [`unmountSignIn()`](/docs/components/authentication/sign-in#unmount-sign-in)
+- [`openSignIn()`](/docs/components/authentication/sign-in#open-sign-in)
+- [`closeSignIn()`](/docs/components/authentication/sign-in#close-sign-in)
+
+### `<SignUp />`
+
+- [`mountSignUp()`](/docs/components/authentication/sign-up#mount-sign-up)
+- [`unmountSignUp()`](/docs/components/authentication/sign-up#unmount-sign-up)
+- [`openSignUp()`](/docs/components/authentication/sign-up#open-sign-up)
+- [`closeSignUp()`](/docs/components/authentication/sign-up#close-sign-up)
 
 ## Additional methods
 
