--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -14,11 +14,26 @@ description: Clerk's <SignIn /> component renders a UI for signing in users.
 
 The `<SignIn />` component renders a UI for signing in users. The functionality of the `<SignIn />` component is controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your `<SignIn />` component by passing additional [properties](#properties) at the time of rendering.
 
-## Usage
+## Properties
+
+All props are optional.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, such as `NEXT_PUBLIC_CLERK_SIGN_IN_URL`, this will be set to `path`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />For example: `/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
+| `redirectUrl` | `string` | Full URL or path to navigate to after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate to after a successful sign in. |
+| `signUpUrl` | `string` | Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate to after a successful sign up. |
+| `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
+
+## Usage with frameworks
 
 The following example includes basic implementation of the `<SignIn />` component. You can use this as a starting point for your own implementation.
 
-<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby", "JavaScript"]}>
+<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
     You can embed the `<SignIn />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignIn />` component should be mounted on a public page.
 
@@ -84,26 +99,223 @@ The following example includes basic implementation of the `<SignIn />` componen
     }
     ```
   </Tab>
-
-  <Tab>
-    To learn about the methods available for rendering and controlling the `<SignIn />` component in a JavaScript application, see the [JavaScript reference docs](/docs/references/javascript/clerk/sign-in).
-  </Tab>
 </Tabs>
 
-## Properties
+## Usage with JavaScript
 
-All props below are optional.
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<SignIn />` component:
+
+- [`mountSignIn()`](#mount-sign-in)
+- [`unmountSignIn()`](#unmount-sign-in)
+- [`openSignIn()`](#open-sign-in)
+- [`closeSignIn()`](#close-sign-in)
+
+The following examples assume that you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application.
+
+### `mountSignIn()`
+
+Render the `<SignIn />` component to an HTML `<div>` element.
+
+```typescript
+function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
+```
+
+#### `mountSignIn()` params
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-in. |
-| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
-| `signUpUrl` | `string` | Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
-| `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element used to render in the `<SignIn />` component |
+| `props?` | [`SignInProps`](#properties) | The properties to pass to the `<SignIn />` component |
+
+#### `mountSignIn()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv =
+    document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="sign-in"> element to your HTML -->
+  <div id="sign-in"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const signInDiv =
+        document.getElementById('sign-in');
+
+      Clerk.mountSignIn(signInDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `unmountSignIn()`
+
+Unmount and run cleanup on an existing `<SignIn />` component instance.
+
+```typescript
+function unmountSignIn(node: HTMLDivElement): void;
+```
+
+#### `unmountSignIn()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<SignIn />` component instance |
+
+#### `unmountSignIn()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="sign-in"></div>
+  `
+
+  const signInDiv =
+    document.getElementById('sign-in');
+
+  clerk.mountSignIn(signInDiv);
+
+  // ...
+
+  clerk.unmountSignIn(signInDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="sign-in"> element to your HTML -->
+  <div id="sign-in"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const signInDiv =
+        document.getElementById('sign-in');
+
+      Clerk.mountSignIn(signInDiv);
+
+      // ...
+
+      Clerk.unmountSignIn(signInDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `openSignIn()`
+
+Opens the `<SignIn />` component as an overlay at the root of your HTML `body` element.
+
+```typescript
+function openSignIn(props?: SignInProps): void;
+```
+
+#### `openSignIn()` params
+
+| Name | Type | Desciption |
+| --- | --- | --- |
+| `props?` | [`SignInProps`](#properties) | The properties to pass to the `<SignIn />` component |
+
+#### `openSignIn()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.js" {7}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  clerk.openSignIn();
+  ```
+
+  ```html filename="index.html" {5}
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      Clerk.openSignIn();
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `closeSignIn()`
+
+Closes the sign in overlay.
+
+```typescript
+function closeSignIn(): void;
+```
+
+#### `closeSignIn()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.js" {11}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  clerk.openSignIn();
+
+  // ...
+
+  clerk.closeSignIn();
+  ```
+
+  ```html filename="index.html" {9}
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      Clerk.openSignIn();
+
+      // ...
+
+      Clerk.closeSignIn();
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ## Customization
 
