--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -3,7 +3,7 @@ title: <SignUp /> component
 description: Clerk's <SignUp /> component renders a UI for signing up users.
 ---
 
-# `<SignUp />`
+# `<SignUp />` component
 
 <Images
   width={496}
@@ -14,11 +14,27 @@ description: Clerk's <SignUp /> component renders a UI for signing up users.
 
 The `<SignUp />` component renders a UI for signing up users. The functionality of the `<SignUp />` component is controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), , such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your `<SignUp />` component by passing additional [properties](#properties) at the time of rendering.
 
-## Usage
+## Properties
 
-The following example includes basic implementation of the `<SignUp />` component. You can use this as a starting point for your own implementation
+All props are optional.
 
-<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby", "JavaScript"]}>
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, such as `NEXT_PUBLIC_CLERK_SIGN_IN_URL`, this will be set to `path`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used<br />For example: `/sign-up`.<br />This prop is ignored in hash- and virtual-based routing. |
+| `redirectUrl` | `string` | Full URL or path to navigate to after successful sign in or sign up.<br />The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate to after a successful sign in. |
+| `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate to after a successful sign up. |
+| `unsafeMetadata` | `object` | An object with the key and value for `unsafeMetadata` that will be saved to the user after sign up.<br />For example: `{ "company": "companyID1234" }` |
+| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
+
+## Usage with frameworks
+
+The following example includes basic implementation of the `<SignIn />` component. You can use this as a starting point for your own implementation.
+
+<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
     You can embed the `<SignUp />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignUp />` component should be mounted on a public page.
 
@@ -81,27 +97,223 @@ The following example includes basic implementation of the `<SignUp />` componen
     }
     ```
   </Tab>
-
-  <Tab>
-    To learn about the methods available for rendering and controlling the `<SignUp />` component in a JavaScript application, see the [JavaScript reference docs](/docs/references/javascript/clerk/sign-up).
-  </Tab>
 </Tabs>
 
-## Properties
+## Usage with JavaScript
 
-All props below are optional.
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<SignUp />` component:
+
+- [`mountSignUp()`](#mount-sign-up)
+- [`unmountSignUp()`](#unmount-sign-up)
+- [`openSignUp()`](#open-sign-up)
+- [`closeSignUp()`](#close-sign-up)
+
+The following examples assume that you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application.
+
+### `mountSignUp()`
+
+Render the `<SignUp />` component to an HTML `<div>` element.
+
+```typescript
+function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
+```
+
+#### `mountSignUp()` params
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-up. |
-| `redirectUrl` | `string` | Full URL or path to navigate to after successful sign in or sign up.<br />The same as setting afterSignInUrl and afterSignUpUrl to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate to after a successful sign in. |
-| `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
-| `unsafeMetadata` | `object` | An object with the key and value for unsafeMetadata that will be saved to the user after sign up.<br />E.g. `{ "company": "companyID1234" }` |
-| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
+| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<SignUp />` component |
+| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the `<SignUp />` component. |
+
+#### `mountSignUp()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```typescript filename="index.ts" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById("app").innerHTML = `
+    <div id="sign-up"></div>
+  `;
+
+  const signUpDiv =
+    document.getElementById("sign-up");
+
+  clerk.mountSignUp(signUpDiv);
+  ```
+
+  ```html filename="index.js" {11}
+  <!-- Add a <div id="sign-up"> element to your HTML -->
+  <div id="sign-up"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const signUpDiv =
+        document.getElementById('sign-up');
+
+      Clerk.mountSignUp(signUpDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `unmountSignUp()`
+
+Unmount and run cleanup on an existing `<SignUp />` component instance.
+
+```typescript
+function unmountSignUp(node: HTMLDivElement): void;
+```
+
+#### `unmountSignUp()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<SignUp />` component instance |
+
+#### `unmountSignUp()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```typescript filename="index.ts" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById("app").innerHTML = `
+    <div id="sign-up"></div>
+  `;
+
+  const signUpDiv =
+    document.getElementById("sign-up");
+
+  clerk.mountSignUp(signUpDiv);
+
+  // ...
+
+  clerk.unmountSignUp(signUpDiv);
+  ```
+
+  ```html filename="index.js" {15}
+  <!-- Add a <div id="sign-up"> element to your HTML -->
+  <div id="sign-up"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const signUpDiv =
+        document.getElementById('sign-up');
+
+      Clerk.mountSignUp(signUpDiv);
+
+      // ...
+
+      Clerk.unmountSignUp(signUpDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `openSignUp()`
+
+Opens the `<SignUp />` component as an overlay at the root of your HTML `body` element.
+
+```typescript
+function openSignUp(props?: SignUpProps): void;
+```
+
+#### `openSignUp()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the `<SignUp />` component |
+
+#### `openSignUp()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.ts" {7}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  clerk.openSignUp();
+  ```
+
+  ```html filename="index.html" {5}
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      Clerk.openSignUp();
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `closeSignUp()`
+
+Closes the sign up overlay.
+
+```typescript
+function closeSignUp(): void;
+```
+
+#### `closeSignUp()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.ts" {11}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  clerk.openSignUp();
+
+  // ...
+
+  clerk.closeSignUp();
+  ```
+
+  ```html filename="index.html" {9}
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      Clerk.openSignUp();
+
+      // ...
+
+      Clerk.closeSignUp();
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ## Customization
 
