--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -14,18 +14,18 @@ description: The `<UserProfile />` component is used to render a beautiful, full
 
 The `<UserProfile />` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
 
-## `<UserProfile />` properties
+## Properties
 
-All props below are optional.
+All props are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
 | `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-in. |
 | `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved. <br />e.g. `{google: ['foo', 'bar'], github: ['qux']}`. |
 
-## How to use the `<UserProfile />` component
+## Usage with frameworks
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -77,12 +77,242 @@ All props below are optional.
   </Tab>
 </Tabs>
 
-## How to customize the `<UserProfile />` component
+## Usage with JavaScript
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<UserProfile />` component:
+
+- [`mountUserProfile()`](#mount-user-profile)
+- [`unmountUserProfile()`](#unmount-user-profile)
+- [`openUserProfile()`](#open-user-profile)
+- [`closeUserProfile()`](#close-user-profile)
+
+The following examples assume that you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application.
+
+### `mountUserProfile()`
+
+Render the `<UserProfile />` component to an HTML `<div>` element.
+
+```typescript
+function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
+```
+
+#### `mountUserProfile()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<UserProfile />` component |
+| `props?` | [`UserProfileProps`](#properties) | The properties to pass to the `<UserProfile />` component |
+
+#### `mountUserProfile()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById("app").innerHTML = `
+    <div id="user-profile"></div>
+  `;
+
+  const userProfileDiv =
+    document.getElementById("user-profile");
+
+  clerk.mountUserProfile(userProfileDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="user-profile"> element to your HTML -->
+  <div id="user-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const userProfileDiv =
+        document.getElementById('user-profile');
+
+      Clerk.mountUserProfile(userProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `unmountUserProfile()`
+
+Unmount and run cleanup on an existing `<UserProfile />` component instance.
+
+```typescript
+function unmountUserProfile(node: HTMLDivElement): void;
+```
+
+#### `unmountUserProfile()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<UserProfile />` component instance. |
+
+#### `unmountUserProfile()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="user-profile"></div>
+  `
+
+  const userProfileDiv =
+    document.getElementById('user-profile');
+
+  clerk.mountUserProfile(userProfileDiv);
+
+  // ...
+
+  clerk.unmountUserProfile(userProfileDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="user-profile"> element to your HTML -->
+  <div id="user-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const userProfileDiv =
+        document.getElementById('user-profile');
+
+      Clerk.mountUserProfile(userProfileDiv);
+
+      // ...
+
+      Clerk.unmountUserProfile(userProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `openUserProfile()`
+
+Opens the `<UserProfile />` component as an overlay at the root of your HTML `body` element.
+
+```typescript
+function openUserProfile(props?: UserProfileProps): void;
+```
+
+#### `openUserProfile()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`UserProfileProps`](#properties) | The properties to pass to the `<UserProfile />` component |
+
+#### `openUserProfile()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="user-profile"></div>
+  `
+
+  const userProfileDiv =
+    document.getElementById('user-profile');
+
+  clerk.openUserProfile(userProfileDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="user-profile"> element to your HTML -->
+  <div id="user-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const userProfileDiv =
+        document.getElementById('user-profile');
+
+      Clerk.openUserProfile(userProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `closeUserProfile()`
+
+Closes the user profile overlay.
+
+```typescript
+function closeUserProfile(): void;
+```
+
+#### `closeUserProfile()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="user-profile"></div>
+  `
+
+  const userProfileDiv =
+    document.getElementById('user-profile');
+
+  clerk.closeUserProfile(userProfileDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="user-profile"> element to your HTML -->
+  <div id="user-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const userProfileDiv =
+        document.getElementById('user-profile');
+
+      Clerk.closeUserProfile(userProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+## Customization
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
-In addition, you also can add custom pages and links. For more information, refer to the [Custom Pages documentation][custom-pages-ref].
-
-[components-ref]: /docs/components/overview
-[ap-ref]: /docs/account-portal/overview
-[custom-pages-ref]: /docs/components/customization/user-profile
+In addition, you also can add custom pages and links to the `<UserProfile />` navigation sidebar. For more information, refer to the [Custom Pages documentation](/docs/components/customization/user-profile).
