fix broken links

--- a/docs/references/javascript/clerk/build-urls.mdx
+++ b/docs/references/javascript/clerk/build-urls.mdx
@@ -40,7 +40,7 @@ Decorates the provided url with the auth token for development instances.
 function buildSignInUrl(options?: RedirectOptions): string;
 ```
 
-Returns the configured url where [`SignIn`](/docs/references/javascript/clerk/sign-in) is mounted or a custom sign-in page is rendered.
+Returns the configured url where [`<SignIn />`](/docs/components/authentication/sign-in) is mounted or a custom sign-in page is rendered.
 
 ### Properties
 
