consolidate JS orgprofile orgswitcher docs to component reference docs

--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -1,9 +1,9 @@
 ---
-title: <OrganizationProfile />
+title: <OrganizationProfile /> component
 description: The `<OrganizationProfile />` component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 ---
 
-# `<OrganizationProfile />`
+# `<OrganizationProfile />` component
 
 <Images
   alt="Organization Profile Example"
@@ -14,18 +14,18 @@ description: The `<OrganizationProfile />` component is used to render a beautif
 
 The `<OrganizationProfile />` component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 
-## `<OrganizationProfile />` properties
+## Properties
 
-All props below are optional.
+All props are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
+| `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate to after leaving an organization. |
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used.<br />For example, `/create-org`<br />This prop is ignored in hash- and virtual-based routing. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used.<br />For example: `/organization-profile`<br />This prop is ignored in hash- and virtual-based routing. |
 
-## How to use the `<OrganizationProfile />` component
+## Usage with frameworks
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -74,12 +74,243 @@ All props below are optional.
     ```
   </Tab>
 </Tabs>
-## How to customize the `<OrganizationProfile />` component
+
+## Usage with JavaScript
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<OrganizationProfile />` component:
+
+- [`mountOrganizationProfile()`](#mount-organization-profile)
+- [`unmountOrganizationProfile()`](#unmount-organization-profile)
+- [`openOrganizationProfile()`](#open-organization-profile)
+- [`closeOrganizationProfile()`](#close-organization-profile)
+
+The following examples assume that you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application.
+
+### `mountOrganizationProfile()`
+
+Render the `<OrganizationProfile />` component to an HTML `<div>` element.
+
+```typescript
+function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProfileProps): void;
+```
+
+#### `mountOrganizationProfile()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<OrganizationProfile />` component |
+| `props?` | [`OrganizationProfileProps`](#properties) | The properties to pass to the `<OrganizationProfile />` component |
+
+#### `mountOrganizationProfile()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById("app").innerHTML = `
+    <div id="organization-profile"></div>
+  `;
+
+  const orgProfileDiv =
+    document.getElementById("organization-profile");
+
+  clerk.mountOrganizationProfile(orgProfileDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="organization-profile"> element to your HTML -->
+  <div id="organization-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgProfileDiv =
+        document.getElementById('organization-profile');
+
+      Clerk.mountOrganizationProfile(orgProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `unmountOrganizationProfile()`
+
+Unmount and run cleanup on an existing `<OrganizationProfile />` component instance.
+
+```typescript
+function unmountOrganizationProfile(node: HTMLDivElement): void;
+```
+
+#### `unmountOrganizationProfile()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<OrganizationProfile />` component instance. |
+
+#### `unmountOrganizationProfile()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="organization-profile"></div>
+  `
+
+  const orgProfileDiv =
+    document.getElementById('organization-profile');
+
+  clerk.mountOrganizationProfile(orgProfileDiv);
+
+  // ...
+
+  clerk.unmountOrganizationProfile(orgProfileDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="organization-profile"> element to your HTML -->
+  <div id="organization-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgProfileDiv =
+        document.getElementById('organization-profile');
+
+      Clerk.mountOrganizationProfile(orgProfileDiv);
+
+      // ...
+
+      Clerk.unmountOrganizationProfile(orgProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `openOrganizationProfile()`
+
+Opens the `<OrganizationProfile />` component as an overlay at the root of your HTML `body` element.
+
+```typescript
+function openOrganizationProfile(props?: OrganizationProfileProps): void;
+```
+
+#### `openOrganizationProfile()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`OrganizationProfileProps`](#properties) | The properties to pass to the `<OrganizationProfile />` component |
+
+#### `openOrganizationProfile()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="organization-profile"></div>
+  `
+
+  const orgProfileDiv =
+    document.getElementById('organization-profile');
+
+  clerk.openOrganizationProfile(orgProfileDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="organization-profile"> element to your HTML -->
+  <div id="organization-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgProfileDiv =
+        document.getElementById('organization-profile');
+
+      Clerk.openOrganizationProfile(orgProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `closeOrganizationProfile()`
+
+Closes the organization profile overlay.
+
+```typescript
+function closeOrganizationProfile(): void;
+```
+
+#### `closeOrganizationProfile()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="organization-profile"></div>
+  `
+
+  const orgProfileDiv =
+    document.getElementById('organization-profile');
+
+  clerk.closeOrganizationProfile(orgProfileDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="organization-profile"> element to your HTML -->
+  <div id="organization-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgProfileDiv =
+        document.getElementById('organization-profile');
+
+      Clerk.closeOrganizationProfile(orgProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+## Customization
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
-In addition, you also can add custom pages and links. For more information, refer to the [Custom Pages documentation][custom-pages-ref].
-
-[components-ref]: /docs/components/overview
-[ap-ref]: /docs/account-portal/overview
-[custom-pages-ref]: /docs/components/customization/organization-profile
+In addition, you also can add custom pages and links to the `<OrganizationProfile />` (/docs/components/customization/organization-profile).
