--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -1,9 +1,9 @@
 ---
-title: <OrganizationSwitcher />
+title: <OrganizationSwitcher /> component
 description: The `<OrganizationSwitcher />` component is used to enable the ability to switch between available organizations the user may be part of in your application.
 ---
 
-# `<OrganizationSwitcher />`
+# `<OrganizationSwitcher />` component
 
 <Images
   alt="Organization Switcher Example"
@@ -20,19 +20,19 @@ All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate to after creating a new organization. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
 | `createOrganizationUrl` | `string` | Full URL or path where the [`<CreateOrganization />`][createorg-ref] component is mounted. |
 | `organizationProfileUrl` | `string` | Full URL or path where the [`<OrganizationProfile />`][orgprofile-ref] component is mounted. |
-| `createOrganizationMode` | `'modal' \| 'navigation'` | Controls whether clicking the "Create organization" button will cause the [`<CreateOrganization />`][createorg-ref] component to open as a modal, or if the browser will navigate to the `createOrganizationUrl` where [`<CreateOrganization />`][createorg-ref] is mounted as a page.<br />Defaults to: `'modal'`. |
-| `organizationProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the "Manage organization" button will cause the [`<OrganizationProfile />`][orgprofile-ref] component to open as a modal, or if the browser will navigate to the `organizationProfileUrl` where [`<OrganizationProfile />`][orgprofile-ref] is mounted as a page.<br />Defaults to: `'modal'`. |
+| `createOrganizationMode` | `'modal' \| 'navigation'` | Controls whether clicking the "Create organization" button will cause the [`<CreateOrganization />`][createorg-ref] component to open as a modal, or if the browser will navigate to the `createOrganizationUrl` where `<CreateOrganization />` is mounted as a page.<br />Defaults to: `'modal'`. |
+| `organizationProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Manage organization** button will cause the [`<OrganizationProfile />`][orgprofile-ref] component to open as a modal, or if the browser will navigate to the `organizationProfileUrl` where `<OrganizationProfile />` is mounted as a page.<br />Defaults to: `'modal'`. |
 | `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate to after the user leaves the currently active organization. |
-| `afterSelectOrganizationUrl` | `string` | Full URL or path to navigate after a successful organization switch. |
-| `hidePersonal` | `boolean` | By default, users can switch between organizations and their personal workspace. This option controls whether [`<OrganizationSwitcher />`][orgswitcher-ref] will include the user's personal workspace in the organization list. Setting this to `true` will hide the personal workspace entry, and allow users to switch only between organizations.<br />Defaults to: `false`. |
-| `defaultOpen` | `boolean` | Controls the default state of the [`<OrganizationSwitcher />`][orgswitcher-ref] component. |
-| `organizationProfileProps` | `object` | Specify options for the underlying [`<OrganizationProfile />`][orgprofile-ref] component.<br />e.g. `{appearance: {...}}` |
+| `afterSelectOrganizationUrl` | `string` | Full URL or path to navigate to after a successful organization switch. |
+| `hidePersonal` | `boolean` | By default, users can switch between organizations and their personal workspace. This option controls whether `<OrganizationSwitcher />` will include the user's personal workspace in the organization list. Setting this to `true` will hide the personal workspace entry, and allow users to switch only between organizations.<br />Defaults to: `false`. |
+| `defaultOpen` | `boolean` | Controls the default state of the `<OrganizationSwitcher />` component. |
+| `organizationProfileProps` | `object` | Specify options for the underlying [`<OrganizationProfile />`][orgprofile-ref] component.<br />For example: `{appearance: {...}}` |
 
-## How to use the `<OrganizationSwitcher />` component
+## Usage with frameworks
 
 <Tabs items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -92,12 +92,137 @@ All props below are optional.
   </Tab>
 </Tabs>
 
-## How to customize the `<OrganizationSwitcher />` component
+## Usage with JavaScript
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<OrganizationSwitcher />` component:
+
+- [`mountOrganizationSwitcher()`](#mount-organization-switcher)
+- [`unmountOrganizationSwitcher()`](#unmount-organization-switcher)
+
+The following examples assume that you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application.
+
+## `mountOrganizationSwitcher()`
+
+Render the `<OrganizationSwitcher />` component to an HTML `<div>` element.
+
+```typescript
+function mountOrganizationSwitcher(node: HTMLDivElement, props?: OrganizationSwitcherProps): void;
+```
+
+### `mountOrganizationSwitcher()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<OrganizationSwitcher />` component |
+| `props?` | [`OrganizationSwitcherProps`](#properties) | The properties to pass to the `<OrganizationSwitcher />` component |
+
+### `mountOrganizationSwitcher()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById("app").innerHTML = `
+    <div id="organization-switcher"></div>
+  `;
+
+  const orgSwitcherDiv =
+    document.getElementById("organization-switcher");
+
+  clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="organization-switcher"> element to your HTML -->
+  <div id="organization-switcher"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgSwitcherDiv =
+        document.getElementById('organization-switcher');
+
+      Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+## `unmountOrganizationSwitcher()`
+
+Unmount and run cleanup on an existing `<OrganizationSwitcher />` component instance.
+
+```typescript
+function unmountOrganizationSwitcher(node: HTMLDivElement): void;
+```
+
+### `unmountOrganizationSwitcher()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<OrganizationSwitcher />` component instance |
+
+### `unmountOrganizationSwitcher()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="organization-switcher"></div>
+  `
+
+  const orgSwitcherDiv =
+    document.getElementById('organization-switcher');
+
+  clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+
+  // ...
+
+  clerk.unmountOrganizationSwitcher(orgSwitcherDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="organization-switcher"> element to your HTML -->
+  <div id="organization-switcher"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgSwitcherDiv =
+        document.getElementById('organization-switcher');
+
+      Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+
+      // ...
+
+      Clerk.unmountOrganizationSwitcher(orgSwitcherDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+## Customization
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
-[components-ref]: /docs/components/overview
-[ap-ref]: /docs/account-portal/overview
-[orgswitcher-ref]: /docs/components/organization/organization-switcher
 [createorg-ref]: /docs/components/organization/create-organization
 [orgprofile-ref]: /docs/components/organization/organization-profile
