update titles of pages

--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -1,9 +1,9 @@
 ---
-title: <UserProfile />
+title: <UserProfile /> component
 description: The `<UserProfile />` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
 ---
 
-# `<UserProfile />`
+# `<UserProfile />` component
 
 <Images
   width={976}
