--- a/docs/references/javascript/clerk/build-urls.mdx
+++ b/docs/references/javascript/clerk/build-urls.mdx
@@ -80,13 +80,13 @@ Returns the configured url where <code><a href="/docs/references/javascript/cler
 function buildUserProfileUrl(): string;
 ```
 
-Returns the url where <code><a href="/docs/references/javascript/clerk/user-profile">UserProfile</a></code> is mounted or a custom user-profile page is rendered.
+Returns the url where [`<UserProfile />`](/docs/components/user/user-profile) is mounted or a custom user-profile page is rendered.
 
 ### Returns
 
 | Type | Description |
 | --- | --- |
-| `string` | The url where [`UserProfile`](/docs/references/javascript/clerk/user-profile) is mounted or a custom user-profile page is rendered. |
+| `string` | The url where [`<UserProfile />`](/docs/components/user/user-profile) is mounted or a custom user-profile page is rendered. |
 
 ## `buildHomeUrl()`
 
