fix broken links

--- a/docs/references/javascript/clerk/build-urls.mdx
+++ b/docs/references/javascript/clerk/build-urls.mdx
@@ -122,10 +122,10 @@ Returns the configured url where <code><a href="/docs/references/javascript/cler
 function buildOrganizationProfileUrl(): string;
 ```
 
-Returns the configured url where <code><a href="/docs/references/javascript/clerk/organization-profile">OrganizationProfile</a></code> is mounted or a custom organization-profile page is rendered.
+Returns the configured url where [`<OrganizationProfile />`](/docs/components/organization/organization-profile) is mounted or a custom organization-profile page is rendered.
 
 ### Returns
 
 | Type | Description |
 | --- | --- |
-| `string` | The configured url where [`OrganizationProfile`](/docs/references/javascript/clerk/organization-profile) is mounted or a custom organization-profile page is rendered. |
+| `string` | The configured url where [`<OrganizationProfile />`](/docs/components/organization/organization-profile) is mounted or a custom organization-profile page is rendered. |
