Add updateUserMetadata() to backend references

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -60,6 +60,7 @@ User operations are exposed under `clerkClient.users`. The following methods are
 ### Update
 
 - [`updateUser()`](/docs/references/backend/user/update-user)
+- [`updateUserMetadata()`](/docs/references/backend/user/update-user-metadata)
 
 ### Delete
 
