--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -3,6 +3,8 @@ title: Next.js Quickstart
 description: Add authentication and user management to your Next.js app with Clerk.
 ---
 
+# Next.js Quickstart
+
 <TutorialHero
   framework="nextjs"
   beforeYouStart={[
